Add ability for cells to receive mouse clicks

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,6 +1,10 @@
 bin_PROGRAMS = gnoridor
 
-gnoridor_SOURCES = main.c gnoridor-board.c gnoridor-cell.c callback.c
+gnoridor_SOURCES = main.c \
+		   gnoridor-board.c \
+		   gnoridor-cell.c \
+		   callback.c \
+		   gnoridor-player.c
 gnoridor_CFLAGS = $(GNORIDOR_CFLAGS)
 
 gnoridor_LDADD = $(GNORIDOR_LIBS)
