Finish switch to meson

--- a/meson.build
+++ b/meson.build
@@ -1,16 +1,18 @@
 project('Gnoridor' ,'c')
 gtkdep = dependency('gtk+-3.0')
 
+gnome = import('gnome') 
+gnresources = gnome.compile_resources('gnoridor-resources', 'src/resources/gnoridor.gresource.xml')
+
 sources = ['src/main.c',
            'src/gnoridor-board.c',
            'src/gnoridor-cell.c',
            'src/callback.c',
            'src/gnoridor-player.c',
-           'src/gnoridor-resources.c',
            'src/gnoridor-board.h',
            'src/gnoridor-cell.h',
            'src/callback.h',
            'src/gnoridor-player.h',]
 
 
-executable('Gnoridor', sources ,dependencies : gtkdep)
+executable('Gnoridor', sources, gnresources,dependencies : gtkdep)
