--- a/meson.build
+++ b/meson.build
@@ -1,12 +1,12 @@
 project('Gnoridor' ,'c')
 gtkdep = dependency('gtk+-3.0')
 
-add_global_arguments('-std=c99', language : 'c')
+add_global_arguments('-std=c99', '-DUNIT_TEST=1', language : 'c')
 
 gnome = import('gnome')
 gnresources = gnome.compile_resources('gnoridor-resources', 'src/resources/gnoridor.gresource.xml')
 
-sources = ['src/main.c',
+sources_no_main = [
            'src/gnoridor-board.c',
            'src/gnoridor-cell.c',
            'src/callback.c',
@@ -16,5 +16,11 @@ sources = ['src/main.c',
            'src/callback.h',
            'src/gnoridor-player.h',]
 
+sources = sources_no_main
+sources += 'src/main.c'
+
 
 executable('Gnoridor', sources, gnresources,dependencies : gtkdep, install : true)
+
+test_dir = executable('test_direction', 'test/test_direction.c', sources_no_main, gnresources, dependencies : gtkdep)
+test('test_direction', test_dir)
